--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item"">
-                <a class=" nav-link" href="#">about</a>
+                <a class=" nav-link" href="#about">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">projects</a>
+                        <a class="nav-link" href="#projects">projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contact</a>
+                        <a class="nav-link" href="#contact">contact</a>
                     </li>
                 </ul>
             </div>
