--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>andre-p4</title>
 </head>
 
-<body>
+<body id="home">
     <!-- navabar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black shadow fixed-top">
         <div class="container">
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item"">
                 <a class=" nav-link" href="#about">about</a>
