rounded image and overflow

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="row mt-5 justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
                         <img src="/image/project/project-01.jpg" class="card-img-top" alt="project 1">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -96,7 +96,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
                         <img src="/image/project/project-02.jpg" class="card-img-top" alt="project 2">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -104,7 +104,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
                         <img src="/image/project/project-03.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -112,7 +112,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
                         <img src="/image/project/project-04.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -120,7 +120,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
                         <img src="/image/project/project-05.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -140,7 +140,7 @@
                 </div>                
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-8 border border-3 border-dark rounded-5 shadow-lg">
+                <div class="col-md-8 border border-3 border-dark rounded-5 shadow-sm">
                     <form class="p-5 ">
                         <div class="mb-3">
                           <label for="name" class="form-label">Nama lengkap</label>
