--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <!-- icon -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-        <!-- mycss -->
-        <link rel="stylesheet" href="style.css">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <!-- mycss -->
+    <link rel="stylesheet" href="style.css">
 
     <title>andre-p4</title>
 </head>
@@ -47,132 +49,161 @@
     <!-- akhir navbar -->
 
     <!-- jumbotron -->
-        <section class="jumbotron text-center -mt-5" style="background-image: url(image/Untitled2.jpg);" >
-            <img class="rounded-circle border border-light border-5 p-1" src="image/profile.jpg" alt="myprofile" width="200">
-            <h1 class="display-4 fw-semibold text-white">Andre</h1>
-            <p class="lead text-white">frontend web developer | ui/ux desain</p> 
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="#ffffff" fill-opacity="1" d="M0,96L60,106.7C120,117,240,139,360,165.3C480,192,600,224,720,208C840,192,960,128,1080,101.3C1200,75,1320,85,1380,90.7L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-              </svg>   
-        </section>
+    <section class="jumbotron text-center -mt-5" style="background-image: url(image/Untitled2.jpg);">
+        <img class="rounded-circle border border-light border-5 p-1" src="image/profile.jpg" alt="myprofile"
+            width="200" >
+        <h1 class="display-4 fw-semibold text-white">Andre</h1>
+        <p class="lead text-white" data-aos="fade-up" data-aos-duration="1000">frontend web developer | ui/ux desain</p>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffffff" fill-opacity="1"
+                d="M0,96L60,106.7C120,117,240,139,360,165.3C480,192,600,224,720,208C840,192,960,128,1080,101.3C1200,75,1320,85,1380,90.7L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+            </path>
+        </svg>
+    </section>
     <!-- alhir jumbotron -->
 
     <!-- about -->
     <section id="about">
         <div class="container">
             <div class="row text-center">
-                <div class="col">
+                <div class="col" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="30">
                     <h2>About me</h2>
                 </div>
             </div>
             <div class="row mt-4 justify-content-center fs-5 text-center">
-                <div class="col-md-4 mb-3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aliquam voluptatum, laudantium dignissimos optio sint repellat provident nisi autem similique.</p>
+                <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="1000">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aliquam voluptatum, laudantium
+                        dignissimos optio sint repellat provident nisi autem similique.</p>
                 </div>
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo culpa harum, tempora consectetur officiis quas porro? Aperiam illo omnis cupiditate cumque impedit assumenda modi laborum?</p>
+                <div class="col-md-4" data-aos="fade-down" data-aos-delay="50" data-aos-duration="1000">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo culpa harum, tempora consectetur
+                        officiis quas porro? Aperiam illo omnis cupiditate cumque impedit assumenda modi laborum?</p>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00000" fill-opacity="1" d="M0,0L60,5.3C120,11,240,21,360,58.7C480,96,600,160,720,170.7C840,181,960,139,1080,122.7C1200,107,1320,117,1380,122.7L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#00000" fill-opacity="1"
+                d="M0,0L60,5.3C120,11,240,21,360,58.7C480,96,600,160,720,170.7C840,181,960,139,1080,122.7C1200,107,1320,117,1380,122.7L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- alhir about -->
 
     <!-- project -->
     <section id="projects" class="bg-black">
         <div class="container">
-            <div class="row text-white text-center">
+            <div class="row text-white text-center" data-aos="flip-right" data-aos-duration="1000">
                 <div class="col">
                     <h2>My Projects</h2>
                 </div>
             </div>
             <div class="row mt-5 justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
+                        data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
                         <img src="/image/project/project-01.jpg" class="card-img-top" alt="project 1">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-down" data-aos-duration="1000">
                         <img src="/image/project/project-02.jpg" class="card-img-top" alt="project 2">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
                         <img src="/image/project/project-03.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
                         <img src="/image/project/project-04.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-down" data-aos-duration="1000">
                         <img src="/image/project/project-05.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,256L48,240C96,224,192,192,288,197.3C384,203,480,245,576,250.7C672,256,768,224,864,218.7C960,213,1056,235,1152,250.7C1248,267,1344,277,1392,282.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffffff" fill-opacity="1"
+                d="M0,256L48,240C96,224,192,192,288,197.3C384,203,480,245,576,250.7C672,256,768,224,864,218.7C960,213,1056,235,1152,250.7C1248,267,1344,277,1392,282.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- contact -->
-    <section id="contact">    
+    <section id="contact">
         <div class="container">
-            <div class="row text-center mb-3">
+            <div class="row text-center mb-3" data-aos="flip-right" data-aos-duration="1000">
                 <div class="col">
                     <h2>Contact me</h2>
-                </div>                
+                </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" data-aos="flip-up" data-aos-duration="1000">
                 <div class="col-md-8 border border-3 border-dark rounded-5 shadow-sm">
                     <form class="p-5 ">
                         <div class="mb-3">
-                          <label for="name" class="form-label">Nama lengkap</label>
-                          <input type="text" class="form-control" id="name" aria-describedby="name">                         
-                        </div>    
+                            <label for="name" class="form-label">Nama lengkap</label>
+                            <input type="text" class="form-control" id="name" aria-describedby="name">
+                        </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="text" class="form-control" id="email" aria-describedby="email">                         
-                          </div>   
-                          <div class="mb-3">
+                            <input type="text" class="form-control" id="email" aria-describedby="email">
+                        </div>
+                        <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>                    
-                        <button type="submit" class="btn btn-dark mt-4">Kirim</button>
-                      </form>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <button type="submit" class="btn btn-dark mt-4"data-aos="flip-left" data-aos-duration="1000" data-aos-delay="50">Kirim</button>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,128L120,149.3C240,171,480,213,720,224C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#000000" fill-opacity="1"
+                d="M0,128L120,149.3C240,171,480,213,720,224C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- akhir contact -->
 
 
     <!-- footer -->
     <footer class="bg-black text-white text-center pb-5">
-        <p>Created width <i class="bi bi-github mx-2"></i>by <a class="text-white fw-bold" href="https://github.com/andri-io">Andri</a></p>
+        <p>Created width <i class="bi bi-github mx-2"></i>by <a class="text-white fw-bold"
+                href="https://github.com/andri-io">Andri</a></p>
     </footer>
     <!-- akhir footer -->
     <!-- bootsrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <!-- aos animate -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
