--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center -mt-5" style="background-image: url(image/Untitled2.jpg);">
         <img class="rounded-circle border border-light border-5 p-1" src="image/profile.jpg" alt="myprofile"
-            width="200" >
-        <h1 class="display-4 fw-semibold text-white">Andre</h1>
+            width="200">
+        <h1 class="display-4 fw-semibold text-white">Andri</h1>
         <p class="lead text-white" data-aos="fade-up" data-aos-duration="1000">frontend web developer | ui/ux desain</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
@@ -82,9 +82,21 @@
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#00000" fill-opacity="1"
-                d="M0,0L60,5.3C120,11,240,21,360,58.7C480,96,600,160,720,170.7C840,181,960,139,1080,122.7C1200,107,1320,117,1380,122.7L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+
+            <path fill="#273036" fill-opacity="0.9"
+                d="M0,32L60,42.7C120,53,240,75,360,85.3C480,96,600,96,720,112C840,128,960,160,1080,154.7C1200,149,1320,107,1380,85.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
             </path>
+
+            
+            <path fill="00000" fill-opacity="0.9"
+            d="M0,0L48,5.3C96,11,192,21,288,58.7C384,96,480,160,576,170.7C672,181,768,139,864,106.7C960,75,1056,53,1152,58.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+        <path fill="00000" fill-opacity="0.8" d="M0,32L48,64C96,96,192,160,288,154.7C384,149,480,75,576,80C672,85,768,171,864,186.7C960,203,1056,149,1152,117.3C1248,85,1344,75,1392,69.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+        
+            <path fill="00000" fill-opacity="1"
+                d="M0,192L48,202.7C96,213,192,235,288,229.3C384,224,480,192,576,181.3C672,171,768,181,864,192C960,203,1056,213,1152,218.7C1248,224,1344,224,1392,224L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+
         </svg>
     </section>
     <!-- alhir about -->
@@ -109,7 +121,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
+                        data-aos="fade-down" data-aos-duration="1000">
                         <img src="/image/project/project-02.jpg" class="card-img-top" alt="project 2">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -118,7 +131,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
+                        data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
                         <img src="/image/project/project-03.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -127,7 +141,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
+                        data-aos="fade-up" data-aos-duration="1000">
                         <img src="/image/project/project-04.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -136,7 +151,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
+                        data-aos="fade-down" data-aos-duration="1000">
                         <img src="/image/project/project-05.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -174,15 +190,28 @@
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            <button type="submit" class="btn btn-dark mt-4"data-aos="flip-left" data-aos-duration="1000" data-aos-delay="50">Kirim</button>
+                            <button type="submit" class="btn btn-dark mt-4" data-aos="flip-left"
+                                data-aos-duration="1000" data-aos-delay="50">Kirim</button>
                     </form>
                 </div>
             </div>
         </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#000000" fill-opacity="1"
-                d="M0,128L120,149.3C240,171,480,213,720,224C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+
+
+
+            <path fill="#273036" fill-opacity="0.5"
+                d="M0,256L48,234.7C96,213,192,171,288,133.3C384,96,480,64,576,85.3C672,107,768,181,864,218.7C960,256,1056,256,1152,245.3C1248,235,1344,213,1392,202.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+            <path fill="00000" fill-opacity="0.5"
+                d="M0,0L48,5.3C96,11,192,21,288,58.7C384,96,480,160,576,170.7C672,181,768,139,864,106.7C960,75,1056,53,1152,58.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+            <path fill="00000" fill-opacity="0.5" d="M0,32L48,64C96,96,192,160,288,154.7C384,149,480,75,576,80C672,85,768,171,864,186.7C960,203,1056,149,1152,117.3C1248,85,1344,75,1392,69.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+
+
+            <path fill="00000" fill-opacity="1"
+                d="M0,288L48,245.3C96,203,192,117,288,106.7C384,96,480,160,576,170.7C672,181,768,139,864,149.3C960,160,1056,224,1152,234.7C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
     </section>
