--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             width="200">
         <h1 class="display-4 fw-semibold text-white">Andri</h1>
         <p class="lead text-white" data-aos="fade-up" data-aos-duration="1000">frontend web developer | ui/ux desain</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="mt-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
                 d="M0,96L60,106.7C120,117,240,139,360,165.3C480,192,600,224,720,208C840,192,960,128,1080,101.3C1200,75,1320,85,1380,90.7L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
             </path>
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="mt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 
             <path fill="#273036" fill-opacity="0.9"
                 d="M0,32L60,42.7C120,53,240,75,360,85.3C480,96,600,96,720,112C840,128,960,160,1080,154.7C1200,149,1320,107,1380,85.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
@@ -171,14 +171,14 @@
     <!-- contact -->
     <section id="contact">
         <div class="container">
-            <div class="row text-center mb-3" data-aos="flip-right" data-aos-duration="1000">
+            <div class="row text-center mb-3 " data-aos="flip-right" data-aos-duration="1000">
                 <div class="col">
                     <h2>Contact me</h2>
                 </div>
             </div>
             <div class="row justify-content-center" data-aos="flip-up" data-aos-duration="1000">
-                <div class="col-md-8 border border-3 border-dark rounded-5 shadow-sm">
-                    <form class="p-5 ">
+                <div class="col-md-8  border border-3 border-dark rounded-5 shadow-sm">
+                    <form class="p-3 py-4">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nama lengkap</label>
                             <input type="text" class="form-control" id="name" aria-describedby="name">
@@ -197,7 +197,7 @@
             </div>
         </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="mt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 
 
 
