--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h2>Contact me</h2>
                 </div>
             </div>
-            <div class="row justify-content-center" data-aos="flip-up" data-aos-duration="1000">
+            <div class="card-contact row justify-content-center" data-aos="flip-up" data-aos-duration="1000">
                 <div class="col-md-8  border border-3 border-dark rounded-5 shadow-sm">
                     <form class="p-3 py-4">
                         <div class="mb-3">
