--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             width="200">
         <h1 class="display-4 fw-semibold text-white">Andri</h1>
         <p class="lead text-white" data-aos="fade-up" data-aos-duration="1000">frontend web developer | ui/ux desain</p>
-        <svg class="mt-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="mt-5 svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
                 d="M0,96L60,106.7C120,117,240,139,360,165.3C480,192,600,224,720,208C840,192,960,128,1080,101.3C1200,75,1320,85,1380,90.7L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
             </path>
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <svg class="mt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 
             <path fill="#273036" fill-opacity="0.9"
                 d="M0,32L60,42.7C120,53,240,75,360,85.3C480,96,600,96,720,112C840,128,960,160,1080,154.7C1200,149,1320,107,1380,85.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="svg2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
                 d="M0,256L48,240C96,224,192,192,288,197.3C384,203,480,245,576,250.7C672,256,768,224,864,218.7C960,213,1056,235,1152,250.7C1248,267,1344,277,1392,282.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
@@ -197,10 +197,7 @@
             </div>
         </div>
         </div>
-        <svg class="mt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-
-
-
+        <svg class="svg3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#273036" fill-opacity="0.5"
                 d="M0,256L48,234.7C96,213,192,171,288,133.3C384,96,480,64,576,85.3C672,107,768,181,864,218.7C960,256,1056,256,1152,245.3C1248,235,1344,213,1392,202.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
