add backgrop filter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body id="home">
     <!-- navabar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Andri</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -49,7 +49,7 @@
     <!-- akhir navbar -->
 
     <!-- jumbotron -->
-    <section class="jumbotron text-center -mt-5" style="background-image: url(image/Untitled2.jpg);">
+    <section class="jumbotron text-center -mt-5" style="background-image: url(image/backgrounf.svg);">
         <img class="rounded-circle border border-light border-5 p-1" src="image/profile.jpg" alt="myprofile"
             width="200">
         <h1 class="display-4 fw-semibold text-white">Andri</h1>
@@ -83,12 +83,12 @@
         </div>
         <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 
-            <path fill="#273036" fill-opacity="0.9"
+            <path fill="#273036" fill-opacity="0.6"
                 d="M0,32L60,42.7C120,53,240,75,360,85.3C480,96,600,96,720,112C840,128,960,160,1080,154.7C1200,149,1320,107,1380,85.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
             </path>
 
             
-            <path fill="00000" fill-opacity="0.9"
+            <path fill="00000" fill-opacity="0.6"
             d="M0,0L48,5.3C96,11,192,21,288,58.7C384,96,480,160,576,170.7C672,181,768,139,864,106.7C960,75,1056,53,1152,58.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
         <path fill="00000" fill-opacity="0.8" d="M0,32L48,64C96,96,192,160,288,154.7C384,149,480,75,576,80C672,85,768,171,864,186.7C960,203,1056,149,1152,117.3C1248,85,1344,75,1392,69.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
