--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <div class="row mt-5 justify-content-center">
                 <div class="col-md-4 mb-3">
                     <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
-                        data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-                        <img src="/image/project/project-01.jpg" class="card-img-top" alt="project 1">
+                        data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">                        
+                        <img src="./project-01.jpg" class="card-img-top" alt="project 1">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
@@ -123,7 +123,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
                         data-aos="fade-down" data-aos-duration="1000">
-                        <img src="/image/project/project-02.jpg" class="card-img-top" alt="project 2">
+                        <img src="./project-02.jpg" class="card-img-top" alt="project 2">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
@@ -133,7 +133,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
                         data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-                        <img src="/image/project/project-03.jpg" class="card-img-top" alt="project 3    ">
+                        <img src="./project-03.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
@@ -143,7 +143,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
                         data-aos="fade-up" data-aos-duration="1000">
-                        <img src="/image/project/project-04.jpg" class="card-img-top" alt="project 3    ">
+                        <img src="./project-04.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
@@ -153,7 +153,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card bg-black text-white border border-3 border-light rounded-4 overflow-hidden"
                         data-aos="fade-down" data-aos-duration="1000">
-                        <img src="/image/project/project-05.jpg" class="card-img-top" alt="project 3    ">
+                        <img src="./project-05.jpg" class="card-img-top" alt="project 3    ">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
